# Django

prod/: .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/database/: db.sqlite3
prod/mysite/mysite/: settings.py
