[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Даниил <fleymer@outloook.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
django = "4.2.0"
djangorestframework = "^3.15.2"
django-rest-framework = "^0.1.0"
django-filter = "^25.1"
django-debug-toolbar = "<5"
pillow = "^11.1.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
